--- a/assets/scss/_section__weekprizes.scss
+++ b/assets/scss/_section__weekprizes.scss
@@ -24,6 +24,10 @@
   align-content: center;
   gap: 50px;
 
+  .title {
+    margin-bottom: -20px;
+  }
+
   img {
     width: 100%;
     position: relative;
@@ -111,5 +115,188 @@
     p {
       font-size: 16px;
     }
+  }
+}
+
+.ozone-prizes {
+  display: flex;
+  position: relative;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  align-content: flex-start;
+  gap: 100px;
+  margin-top: 150px;
+  padding-bottom: 75px;
+  @media (max-width: 1279px) {
+    margin-top: 100px;
+    padding-bottom: 25px;
+  }
+
+  li {
+    position: relative;
+    width: 100%;
+    max-width: 520px;
+    text-align: center;
+
+    .yellow {
+      font-size: 32px;
+      font-family: var(--5);
+      font-weight: 400;
+    }
+  }
+}
+
+.weekprize__image {
+  position: relative;
+  max-width: 400px;
+  border-radius: 30px;
+  overflow: hidden;
+  margin: -10px auto;
+}
+
+.swiper--products {
+  overflow: visible;
+  margin-top: 100px;
+  .swiper-arrow {
+    margin-top: -0px;
+    &[data-arrow-next] {
+      left: calc(100% - 24px);
+    }
+    &[data-arrow-prev] {
+      right: calc(100% - 24px);
+    }
+  }
+  img {
+    height: 400px;
+  }
+  .swiper-slide {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 14px;
+    font-family: var(--4);
+    text-align: center;
+    transition: 0.6s;
+    opacity: 0;
+    &.swiper-slide-active,
+    &.swiper-slide-next,
+    &.swiper-slide-next + .swiper-slide {
+      opacity: 1;
+    }
+
+    .image {
+      width: 300px;
+      height: 254px;
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      align-content: flex-end;
+      img {
+        position: absolute;
+      }
+    }
+
+    &:nth-child(1) {
+      .image {
+        img {
+          bottom: -20px;
+          height: 330px;
+        }
+      }
+    }
+    &:nth-child(2) {
+      .image {
+        img {
+          bottom: 0px;
+        }
+      }
+    }
+    &:nth-child(3) {
+      .image {
+        img {
+          bottom: 30px;
+        }
+      }
+    }
+    &:nth-child(4) {
+      .image {
+        img {
+          bottom: 0px;
+        }
+      }
+    }
+    &:nth-child(5) {
+      .image {
+        img {
+          bottom: 30px;
+        }
+      }
+    }
+    &:nth-child(6) {
+      .image {
+        img {
+          height: 350px;
+          bottom: -10px;
+        }
+      }
+    }
+
+    h3 {
+      font-size: 24px;
+      line-height: 1.2;
+      color: var(--yellow);
+      max-width: 192px;
+      margin-top: 10px;
+    }
+    p {
+      font-size: 16px;
+      max-width: 192px;
+    }
+  }
+}
+
+@media (max-width: 1279px) {
+  .ozone-prizes li .yellow {
+    font-size: 20px;
+  }
+  .weekprize__image {
+    max-width: 300px;
+    border-radius: 20px;
+  }
+  .ozone-prizes li {
+    max-width: 320px;
+  }
+  .garanty-prizes {
+    max-width: 684px !important;
+  }
+  .swiper--products {
+    margin-top: 50px;
+    max-width: 800px;
+    .swiper-slide {
+      &.swiper-slide-prev {
+        opacity: 0;
+      }
+    }
+  }
+  .weekprize .title {
+    font-size: 26px;
+    margin-bottom: -10px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .ozone-prizes li {
+    max-width: 300px;
+  }
+  .ozone-prizes {
+    gap: 50px;
+    margin-top: 50px;
+    padding-bottom: 70px;
   }
 }
